implement funcion parser (need to fix numeric issue) implement calculate effective value and implemented half of the engine interface